--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+openmediavault-transmissionbt (0.2.4) stable; urgency=low
+
+  * Added Files and Location
+  * Added Bandwidth
+  * Added Queuing
+
+ -- Marcel Beck <marcel.beck@mbeck.org>  Fri, 18 Nov 2011 13:55:36 +0100
+ 
 openmediavault-transmissionbt (0.2.3) stable; urgency=low
 
   * Mantis 0000224: transmissionbt daily Cron
