--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+openmediavault-transmissionbt (0.2.5) stable; urgency=low
+
+  * Github Issue #1 - Added Peer
+  * Github Issue #4
+  * Github Issue #8 Config is reloaded without transmissionbt restart
+
+ -- Marcel Beck <marcel.beck@mbeck.org>  Fri, 18 Nov 2011 21:58:26 +0100
+
 openmediavault-transmissionbt (0.2.4) stable; urgency=low
 
   * Added Files and Location
