--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault-transmissionbt (0.2.6) stable; urgency=low
+
+  * Github Issue #6 - Clean PHP Code, add correct type handling
+  
+ -- Marcel Beck <marcel.beck@mbeck.org>  Sat, 19 Nov 2011 00:43:50 +0100
+
 openmediavault-transmissionbt (0.2.5) stable; urgency=low
 
   * Github Issue #1 - Add Peers Section
