--- a/debian/changelog
+++ b/debian/changelog
@@ -1,7 +1,8 @@
 openmediavault-transmissionbt (0.2.8) stable; urgency=low
 
-  * Github Issue #19 - Bandwith - Turtle Mode Switch Upload/Download
   * Github Issue #18 - Force new transmission-daemon
+  * Github Issue #19 - Bandwith - Turtle Mode Switch Upload/Download
+  * Github Issue #20 - Transmission Stops running after Upgrade
   
  -- Marcel Beck <marcel.beck@mbeck.org>  Sun, 27 Nov 2011 19:07:07 +0100
 
