--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault-transmissionbt (0.2.8.0.1) stable; urgency=low
+
+  * Github Issue #23 - Add Queue Managment
+
+ -- Marcel Beck <marcel.beck@mbeck.org>  Sun, 27 Nov 2011 21:58:23 +0100
+
 openmediavault-transmissionbt (0.2.8) stable; urgency=low
 
   * Github Issue #3 - Possibility to mange Torrents inside OMV
@@ -5,7 +11,7 @@ openmediavault-transmissionbt (0.2.8) stable; urgency=low
   * Github Issue #19 - Bandwith - Turtle Mode Switch Upload/Download
   * Github Issue #20 - Transmission Stops running after Upgrade
 
- -- Marcel Beck <marcel.beck@mbeck.org>  Sun, 27 Nov 2011 19:07:07 +0100
+ -- Marcel Beck <marcel.beck@mbeck.org>  Sun, 27 Nov 2011 21:58:23 +0100
 
 openmediavault-transmissionbt (0.2.7.3) stable; urgency=low
 
