--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,11 @@
 openmediavault-transmissionbt (0.2.8.1) stable; urgency=low
 
+  * Github Issue #26 - Upgrade Problem from <0.2.8 to >=0.2.8
+
+ -- Marcel Beck <marcel.beck@mbeck.org>  Mon, 28 Nov 2011 00:20:00 +0100
+
+openmediavault-transmissionbt (0.2.8.1) stable; urgency=low
+
   * Github Issue #22 - Dont restart transmission-daemon after update, only config update is needed
   * Github Issue #23 - Add Queue Managment
 
