--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault-transmissionbt (0.2.8.4) stable; urgency=low
+
+  * Just reload transmission-daemon
+
+ -- Marcel Beck <marcel.beck@mbeck.org>  Mon, 28 Nov 2011 00:36:00 +0100
+
 openmediavault-transmissionbt (0.2.8.3) stable; urgency=low
 
   * Fixed Trap
