--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault-transmissionbt (0.2.8.6) stable; urgency=low
+
+  * Code Style
+
+ -- Marcel Beck <marcel.beck@mbeck.org>  Wed, 07 Dec 2011 23:04:22 +0100
+
 openmediavault-transmissionbt (0.2.8.5) stable; urgency=low
 
   * Github Issue #30 - Error with jobs tab and autorefresh after update to 0.2.8.3
